<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fb_bg_feedback"
    android:orientation="vertical"
    android:paddingBottom="@dimen/fb_padding_bottom_feedback">

    <com.core.baseui.toolbar.CoreToolbarView
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:ctv_ic_back_icon="@drawable/fb_ic_back_feedback" />

    <androidx.appcompat.widget.AppCompatImageView style="@style/LogoFeedback"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TitleFeedback"
        android:fontFamily="@font/roboto_medium"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvType"
        style="@style/FB_TextType"
        android:textSize="@dimen/fb_text_size_type"
        android:visibility="gone"/>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/matterFlexible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="@dimen/fb_matter_marginTop"
        android:visibility="gone"
        app:flexWrap="wrap"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFeatureQualityFl"
            style="@style/TextMatter"
            android:text="@string/fb_feedback_feature_quality"
            tools:ignore="MissingConstraints"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBugFl"
            style="@style/TextMatter"
            android:text="@string/fb_feedback_bug"
            tools:ignore="MissingConstraints"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCrashFl"
            style="@style/TextMatter"
            android:text="@string/fb_feedback_crash"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOtherFl"
            style="@style/TextMatter"
            android:text="@string/fb_feedback_other"
            tools:ignore="MissingConstraints"/>

    </com.google.android.flexbox.FlexboxLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/matterLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fb_matter_marginTop"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFeatureQuality"
                style="@style/TextMatter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:paddingVertical="8dp"
                android:text="@string/fb_feedback_feature_quality"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBug"
                style="@style/TextMatter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:paddingVertical="8dp"
                android:text="@string/fb_feedback_bug" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCrash"
                style="@style/TextMatter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:paddingVertical="8dp"
                android:text="@string/fb_feedback_crash" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOthers"
                style="@style/TextMatter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:paddingVertical="8dp"
                android:text="@string/fb_feedback_other"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtFeedback"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/fb_bg_edit_feedback"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start"
        android:hint="@string/fb_hint_feedback"
        android:lineSpacingExtra="3dp"
        android:padding="10dp"
        android:textColor="@color/fb_feedback_title"
        android:textColorHint="#A6A6A6"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivSendFeedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fb_button_send_height"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="@dimen/fb_button_send_margin_top"
        android:layout_marginBottom="@dimen/fb_button_send_margin_bottom"
        android:background="@drawable/fb_bg_rate_us_button"
        android:ellipsize="end"
        android:enabled="false"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/fb_send"
        android:textColor="#ffffff"
        android:textSize="@dimen/fb_text_size_button_send"
        app:layout_constraintTop_toBottomOf="@+id/ivHand"/>

</androidx.appcompat.widget.LinearLayoutCompat>