<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fb_image_header"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/fb_bg_dialog_thanks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageHeader"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageLogoThank"
            style="@style/LogoThanks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/imageLogoThank">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/fb_thank_feedback_title_marginTop"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/fb_thank_for_feedback"
                android:textColor="#000000"
                android:textSize="@dimen/fb_text_size_title_dialog_thanks"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/fb_sorry_customer"
                android:textColor="#909090"
                android:textSize="@dimen/fb_text_size_body_dialog_thanks"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOk"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fb_button_thank_height"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/fb_bg_rate_us_button"
                android:ellipsize="end"
                android:enabled="true"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/fb_thanks"
                android:textColor="#ffffff"
                android:textSize="@dimen/fb_text_size_button_send"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>